--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body
 {
+    background: #1e1f24;
     color: green;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -10,12 +11,18 @@ body
 
 #cabecera
 {
-    background: blueviolet;
+    background: url("../imagenes/astr.png") no-repeat center center cover;
     box-shadow: 0px 2px 30px 0px rgb(0,0,0,0.75);
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.5em;
+    padding: 0.5em 0 0.5em 3em;
+}
+
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline 
@@ -41,5 +48,6 @@ body
 
 #post 
 {
-  padding: 1em;   
+    background: white;
+    padding: 1em;   
 }
